--- a/1-Fundamentals/Python/Hundir_la_flota/Intro_hlf.ipynb
+++ b/1-Fundamentals/Python/Hundir_la_flota/Intro_hlf.ipynb
@@ -42,11 +42,235 @@
     "1. El git clone del repositorio de github a tu ordenador y explicar las partes más relevantes del código.\n",
     "2. Una demo donde se muestre el correcto funcionamiento del código para jugar, ejecutándose desde terminal"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creación de tablero."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "tablero = np.full((10,10), \"_\")\n",
+    "print(tablero)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def crear_tablero():\n",
+    "    tablero = np.full((10,10), \"_\")\n",
+    "    return tablero"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tablero_jugador = crear_tablero()\n",
+    "tablero_rival = crear_tablero()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Colocar barcos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['_' '_' '_' 'O' 'O' 'O' 'O' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "tablero[0,3] = \"O\"\n",
+    "tablero[0,4] = \"O\"\n",
+    "tablero[0,5] = \"O\"\n",
+    "tablero[0,6] = \"O\"\n",
+    "print(tablero)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 3]\n",
+      "[0, 4]\n",
+      "[0, 5]\n",
+      "[0, 6]\n",
+      "[4, 7]\n",
+      "[5, 7]\n",
+      "[6, 7]\n",
+      "[8, 8]\n",
+      "[8, 9]\n",
+      "[1, 7]\n",
+      "[['O' '_' '_' 'O' 'O' 'O' 'O' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' 'O' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' 'O' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' 'O' '_' 'O' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' 'O' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' 'O' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' 'O' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' 'O' 'O']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "barco_jugador = [[[0,3], [0,4], [0,5], [0,6]], [[4,7], [5,7], [6,7]], [[8,8], [8,9]], [[1,7]]]\n",
+    "\n",
+    "for i in barco_jugador:\n",
+    "    for j in i:\n",
+    "        print(j)\n",
+    "        tablero[j[0], j[1]] = \"O\"\n",
+    "    \n",
+    "print(tablero)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def colocar_barco(barco):\n",
+    "    for i in barco:\n",
+    "        tablero[i[0], i[1]] = \"O\"\n",
+    "        \n",
+    "    print(tablero)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['_' '_' '_' 'O' 'O' 'O' 'O' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']]\n",
+      "[['_' '_' '_' 'O' 'O' 'O' 'O' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' 'O' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' 'O' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' 'O' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "barco_1 = [[0,3], [0,4], [0,5], [0,6]]\n",
+    "barco_2 = [[4,7], [5,7], [6,7]]\n",
+    "\n",
+    "colocar_barco(barco_1)\n",
+    "\n",
+    "colocar_barco(barco_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tablero)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.4 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -60,14 +284,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "90139cb9a825bf3d63f6f6704e828dbd1ff7edbd4d0c6e906a71235d6efc74af"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
