w3 Hundir la flota v2

--- a/1-Fundamentals/Python/Hundir_la_flota/Intro_hlf.ipynb
+++ b/1-Fundamentals/Python/Hundir_la_flota/Intro_hlf.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -146,31 +146,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 3]\n",
-      "[0, 4]\n",
-      "[0, 5]\n",
-      "[0, 6]\n",
-      "[4, 7]\n",
-      "[5, 7]\n",
-      "[6, 7]\n",
-      "[8, 8]\n",
-      "[8, 9]\n",
-      "[1, 7]\n",
-      "[['O' '_' '_' 'O' 'O' 'O' 'O' '_' '_' '_']\n",
+      "[['_' '_' '_' 'O' 'O' 'O' 'O' '_' '_' '_']\n",
       " ['_' '_' '_' '_' '_' '_' '_' 'O' '_' '_']\n",
       " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
-      " ['_' '_' '_' '_' 'O' '_' '_' '_' '_' '_']\n",
-      " ['_' '_' '_' '_' '_' 'O' '_' 'O' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
       " ['_' '_' '_' '_' '_' '_' '_' 'O' '_' '_']\n",
       " ['_' '_' '_' '_' '_' '_' '_' 'O' '_' '_']\n",
       " ['_' '_' '_' '_' '_' '_' '_' 'O' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
       " ['_' '_' '_' '_' '_' '_' '_' '_' 'O' 'O']\n",
       " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']]\n"
      ]
@@ -181,7 +171,6 @@
     "\n",
     "for i in barco_jugador:\n",
     "    for j in i:\n",
-    "        print(j)\n",
     "        tablero[j[0], j[1]] = \"O\"\n",
     "    \n",
     "print(tablero)"
@@ -189,20 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def colocar_barco(barco):\n",
-    "    for i in barco:\n",
-    "        tablero[i[0], i[1]] = \"O\"\n",
-    "        \n",
-    "    print(tablero)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -210,55 +186,14 @@
      "output_type": "stream",
      "text": [
       "[['_' '_' '_' 'O' 'O' 'O' 'O' '_' '_' '_']\n",
-      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
-      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
-      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
-      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
-      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
-      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
-      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
-      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
-      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']]\n",
-      "[['_' '_' '_' 'O' 'O' 'O' 'O' '_' '_' '_']\n",
-      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' 'O' '_' '_']\n",
       " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
       " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
       " ['_' '_' '_' '_' '_' '_' '_' 'O' '_' '_']\n",
       " ['_' '_' '_' '_' '_' '_' '_' 'O' '_' '_']\n",
       " ['_' '_' '_' '_' '_' '_' '_' 'O' '_' '_']\n",
       " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
-      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
-      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']]\n"
-     ]
-    }
-   ],
-   "source": [
-    "barco_1 = [[0,3], [0,4], [0,5], [0,6]]\n",
-    "barco_2 = [[4,7], [5,7], [6,7]]\n",
-    "\n",
-    "colocar_barco(barco_1)\n",
-    "\n",
-    "colocar_barco(barco_2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
-      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
-      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
-      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
-      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
-      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
-      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
-      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
-      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' 'O' 'O']\n",
       " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']]\n"
      ]
     }
@@ -266,6 +201,156 @@
    "source": [
     "print(tablero)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# _________________________________________________________________________________________________\n",
+    "# DIA 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "barco_jugador = [[[0,3], [0,4], [0,5], [0,6]], [[4,7], [5,7], [6,7]], [[8,8], [8,9]], [[1,7]]]\n",
+    "\n",
+    "def crear_tablero():\n",
+    "    tablero = np.full((10,10), \"_\")\n",
+    "    return tablero\n",
+    "\n",
+    "\n",
+    "# barco_1 = [[0,3], [0,4], [0,5], [0,6]]\n",
+    "# barco_jugador = [[[0,3], [0,4], [0,5], [0,6]], [[4,7], [5,7], [6,7]], [[8,8], [8,9]], [[1,7]]]\n",
+    "\n",
+    "def colocar_barcos(tablero, barcos):\n",
+    "    for  i in barcos:\n",
+    "        for j in i:\n",
+    "            tablero[j[0], j[1]] = \"O\"\n",
+    "        \n",
+    "    return tablero\n",
+    "\n",
+    "\n",
+    "tablero = crear_tablero()\n",
+    "tablero = colocar_barcos(tablero, barco_jugador)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SIMBOLOS.\n",
+    "\n",
+    "- \" \" = AGUA.\n",
+    "- O = BARCO.\n",
+    "- X = IMPACTOS.\n",
+    "- \"#\" = DISPAROS AGUA.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['_' '_' '_' 'X' 'O' 'O' 'O' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' 'O' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' 'O' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' 'O' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' 'O' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' 'O' 'O']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "if tablero[0,3] ==\"O\":\n",
+    "    tablero[0,3] = \"X\"\n",
+    "else:\n",
+    "    tablero[0,3] = \"#\"\n",
+    "\n",
+    "print(tablero)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_disparos = []\n",
+    "def disparo():\n",
+    "    fila = int(input(\"selecciona la fila\"))\n",
+    "    columna = int(input(\"selecciona la columna\"))\n",
+    "    if tablero[fila,columna] ==\"O\":\n",
+    "        tablero[fila,columna] = \"X\"\n",
+    "    elif tablero[fila,columna] == \"#\" or tablero[fila, columna] == \"X\":\n",
+    "        print(\"Posiccion ya seleccionada\")\n",
+    "        disparo()\n",
+    "    else:\n",
+    "        tablero[fila,columna] = \"#\"\n",
+    "\n",
+    "    return tablero"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Posiccion ya seleccionada\n"
+     ]
+    }
+   ],
+   "source": [
+    "tablero = disparo()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['#' '_' '_' 'O' 'X' 'O' 'O' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' 'O' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' 'O' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' 'O' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' 'O' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' 'O' 'O']\n",
+      " ['_' '_' '_' '_' '_' '_' '_' '_' '_' '_']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tablero)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
